<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetInformasi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Transparent"
    app:behavior_peekHeight="200dp"
    app:behavior_hideable="false"
    android:padding="10dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:orientation="vertical">
    <TextView
        android:id="@+id/primeToPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primeToPay"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showToTheCashier"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:textColor="@color/gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kartuSatu"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="normal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginLeft="-5dp"
            android:textColor="@color/green_signup"/>
        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="179000"
            android:padding="5dp"
            android:layout_marginRight="60dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beans"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@id/balance"
            android:padding="5dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-5dp"
            android:textColor="@color/green_signup"/>
        <TextView
            android:id="@+id/beans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/balance"
            android:text="1"
            android:padding="5dp"
            android:layout_marginTop="-5dp"
            android:layout_marginRight="60dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"/>
</LinearLayout>