<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.DrinksFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarFadeDuration="500"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/root"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <RelativeLayout
                android:id="@+id/layoutNonCoffe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nonCoffe"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingBottom="15dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrowmenu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBarNonCoffe"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerNonCoffe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/layoutCoffe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coffe"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingBottom="15dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrowmenu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerCoffe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progressBarCoffe"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/layoutFrappeCoffe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frappeCoffe"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingBottom="15dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrowmenu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerFrappeCoffe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progressBarFrappeCoffe"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/layoutFrappeJuice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frappeJuice"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingBottom="15dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrowmenu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerFrappeJuice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progressBarFrappeJuice"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/layoutTea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tea"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingBottom="15dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrowmenu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBarTea"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerTea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/layoutFrappeCream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frappeCream"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingBottom="15dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrowmenu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBarFrappeCream"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerFrappeCream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>

</layout>